<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login">


    <TextView
        android:id="@+id/appNameTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="68dp"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/emailEditText"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textSize="25sp"
        android:layout_width="291dp"
        android:layout_height="56dp"
        android:layout_below="@+id/appNameTextView"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true" />


    <EditText
        android:id="@+id/passwordEditText"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textSize="25sp"
        android:layout_width="291dp"
        android:layout_height="56dp"
        android:layout_below="@+id/emailEditText"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="18sp"
        android:layout_below="@id/passwordEditText"
        android:layout_alignEnd="@+id/passwordEditText"
        android:layout_alignRight="@+id/passwordEditText"
        android:layout_marginTop="10dp" />


    <Button
        android:id="@+id/signInButton"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/sign_in"
        android:textSize="17sp" />


    <Button
        android:id="@+id/signUpButton"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_below="@id/signInButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:textSize="17sp" />



</RelativeLayout>