<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/signUpTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/firstNameEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/signUpTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/lastNameEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:hint="@string/last_name"
        android:textSize="25sp"
        android:inputType="textPersonName"
        android:layout_below="@id/firstNameEditText"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/emailEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/lastNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/phoneNumberEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/emailEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/phoneNumberEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="25sp" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="130dp"
        android:layout_height="70dp"
        android:layout_below="@id/passwordEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/sign_up"
        android:textSize="17sp" />


</RelativeLayout>