<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmailVerification">

    <ImageView
        android:id="@+id/emailImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:src="@drawable/verification_email" />

    <TextView
        android:id="@+id/verifyEmailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/verify"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/verifyReasonTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifyEmailTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/verify_reason"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <Button
        android:id="@+id/resendEmailButton"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_below="@id/verifyReasonTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:text="@string/resend_email"
        android:textSize="17sp" />
</RelativeLayout>