<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="300dp"
    android:layout_gravity="center" >

    <ImageView
        android:id="@+id/checkmarkImageView"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/ic_checkmark"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/verifiedTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkmarkImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/verified"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/verifySuccessTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verifiedTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:gravity="center"
        android:text="@string/verify_success"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Button
        android:id="@+id/dashboardButton"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_below="@id/verifySuccessTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/dashboard"
        android:textSize="15sp" />



</RelativeLayout>